--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-  ![](https://github.com/SiAryan/asingh2-TrialBook/blob/main/trackGIF1.gif)
+  ![Image](https://github.com/SiAryan/asingh2-TrialBook/blob/main/trackGIF1.gif)
 
 
 Aryan Singh
