--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-![](https://github.com/SiAryan/asingh2-TrialBook/blob/main/video/Screen%20Shot%202021-03-06%20at%2011.49.28%20PM.png)
+![](video/Screen%20Shot%202021-03-06%20at%2011.49.28%20PM.png)
 
 Aryan Singh
     1533732
